--- a/index.css
+++ b/index.css
@@ -47,14 +47,6 @@ footer {
   background-color: #0b0704;
 }
 
-button:hover {
-  background-color: #333;
-}
-
-button:active {
-  background-color: black;
-}
-
 .container {
   padding: 20px 10%;
   font-family: Arial, Helvetica, sans-serif;
@@ -76,6 +68,14 @@ button:active {
 
 .card a {
   padding: 10px 20%;
+}
+
+.card a:hover {
+  background-color: #333;
+}
+
+.card a:active {
+  background-color: black;
 }
 
 .card-header {
