king name changed to fix

--- a/index.css
+++ b/index.css
@@ -214,7 +214,7 @@ select:focus {
 }
 
 #king {
-  background-image: url("images/king.jpg");
+  background-image: url("images/kingmain.jpg");
 }
 
 #minisuite {
