--- a/contactus.css
+++ b/contactus.css
@@ -1,17 +1,21 @@
 * {
   margin: 0;
   padding: 0;
-  color: #c8c8c8;
+
   text-align: center;
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
-
-p,
-u {
-  color: #0b0704;
+p {
+  color: #000000;
+  text-align: center;
 }
-
+u {
+  color: #000000;
+}
+tbody {
+  color: #000000;
+}
 li,
 a,
 span {
@@ -63,7 +67,6 @@ footer {
   padding: 20px;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #0b0704;
-  position: relative;
 }
 
 .container {
@@ -73,67 +76,9 @@ footer {
   font-size: 20px;
   overflow: auto;
 }
-
-.slideshow-container {
-  padding: 10px;
-  max-width: 1000px;
-  max-height: min-content;
-  position: relative;
-  margin: auto;
-}
-
-.numbertext {
-  color: #ffffff;
-  font-size: 25px;
-  padding: 8px 12px;
-  text-align: center;
+table {
+  color: #000000;
   align-content: center;
-  position: absolute;
-  top: 0;
-}
-
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #717171;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #0b0704;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-#dots {
-  text-align: center;
-}
-
-@-webkit-keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
 }
 
 @media (max-width: 1000px) {
