--- a/contactus.css
+++ b/contactus.css
@@ -6,16 +6,20 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
 p {
-  color: #000000;
+  color: #0b0704;
   text-align: center;
 }
+
 u {
-  color: #000000;
+  color: #0b0704;
 }
+
 tbody {
-  color: #000000;
+  color: #0b0704;
 }
+
 li,
 a,
 span {
@@ -40,10 +44,10 @@ header li {
 }
 
 section {
-  background-image: linear-gradient(
-    109.5deg,
-    rgba(76, 221, 242, 1) 11.2%,
-    rgba(92, 121, 255, 1) 91.1%
+  background-image: radial-gradient(
+    circle farthest-corner at 10% 20%,
+    rgba(50, 172, 109, 1) 0%,
+    rgba(209, 251, 155, 1) 100.2%
   );
 }
 
@@ -65,8 +69,15 @@ hr {
 
 footer {
   padding: 20px;
+  color: c8c8c8;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #0b0704;
+  position: relative;
+}
+
+table {
+  color: #0b0704;
+  align-content: center;
 }
 
 .container {
@@ -75,10 +86,6 @@ footer {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   overflow: auto;
-}
-table {
-  color: #000000;
-  align-content: center;
 }
 
 @media (max-width: 1000px) {
