--- a/contactus.css
+++ b/contactus.css
@@ -69,7 +69,7 @@ hr {
 
 footer {
   padding: 20px;
-  color: c8c8c8;
+  color: #c8c8c8;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #0b0704;
   position: relative;
@@ -82,6 +82,7 @@ table {
 
 .container {
   padding: 20px 10%;
+  align-items: center;
   color: #0b0704;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
